--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -5,20 +5,21 @@ Figure~\ref{fig:aug_examples} shows appearance-level augmentations (contrast, br
 
 \begin{figure}[htbp]
 \centering
-\subfloat[Original]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033.png}}\hfill
-\subfloat[Contrast]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug1.png}}\hfill
-\subfloat[Brightness]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug2.png}}\\[0.6em]
-\subfloat[Gaussian blur]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug3.png}}\hfill
-\subfloat[Gaussian noise]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug4.png}}\hfill
-\subfloat[CLAHE]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.108197895896446896160048741492_0033_aug5.png}}
-\caption{Label-preserving appearance augmentations on a CT slice.}
+\subfloat[Original]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142.png}}\hfill
+\subfloat[Contrast]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_aug1.png}}\hfill
+\subfloat[Brightness]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_aug2.png}}\\[0.6em]
+\subfloat[Gaussian blur]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_aug3.png}}\hfill
+\subfloat[Gaussian noise]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_aug4.png}}\hfill
+\subfloat[CLAHE]{\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_aug5.png}}
+\caption{Original CT slices including appearance-level augmentations.}
 \label{fig:aug_examples}
 \end{figure}
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.3\linewidth]{figs/1.3.6.1.4.1.14519.5.2.1.6279.6001.105756658031515062000744821260_0029_fake_A.png}
-\caption{CycleGAN-generated CT slice.}
+\includegraphics[width=0.3\linewidth]{figs/cyc_1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_fake_A.png}
+\includegraphics[width=0.3\linewidth]{figs/cyc_1.3.6.1.4.1.14519.5.2.1.6279.6001.100621383016233746780170740405_0142_fake_B.png}
+\caption{CycleGAN-generated CT slices.}
 \label{fig:cyclegan_example}
 \end{figure}
 
