--- a/latex/02-related-work.tex
+++ b/latex/02-related-work.tex
@@ -1,12 +1,11 @@
 \section{Related Work}
 
 \subsection{GAN-based Augmentation in Medical Imaging}
-Generative Adversarial Networks (GANs)~\cite{goodfellow2014gan} and CycleGAN~\cite{zhu2017cyclegan} are widely used for medical image synthesis and augmentation. Empirical evidence shows substantial gains in CT-based classification and segmentation when augmenting with GAN-generated images~\cite{frid2018gan,sandfort2019cycleganCT}. However, transferring these benefits to spatially sensitive object detection is less clear. CycleGAN-based augmentation for YOLO in multi-organ CT detection reported mixed outcomes~\cite{hammami2020cyclegan}, suggesting that appearance-level transformations may not consistently enhance bounding-box localization.
-
+Generative Adversarial Networks (GANs)~\cite{goodfellow2014gan} and CycleGAN~\cite{zhu2017cyclegan} are widely used for medical image synthesis and augmentation. Empirical evidence shows substantial gains in CT-based classification and segmentation when augmenting with GAN-generated images~\cite{frid2018gan,sandfort2019cycleganCT}. However, transferring these benefits to spatially sensitive object detection is less clear. CycleGAN-based augmentation for YOLO in multi-organ CT detection reported mixed outcomes~\cite{hammami2020cyclegan}, suggesting that appearance-level transformations may not consistently enhance bounding-box localization. \\
 Beyond GANs, diffusion models and style-based generators provide additional context. Transformer- and latent-diffusion approaches improve anatomical consistency and downstream performance in multiple modalities~\cite{pan2023ddpm,khader2023ddpm3d}. 3D and StyleGAN-based methods have modeled lung CT textures with high realism~\cite{ellis2022stylegan3d,shi2020stylegan}. These works indicate that volumetric or anatomy-aware synthesis may be more suitable than purely appearance-level augmentation for tasks requiring precise localization.
 
 \subsection{Object Detection in Chest CT}
 Detectors such as Faster R-CNN~\cite{ren2015fasterrcnn}, RetinaNet~\cite{lin2017focal}, and the YOLO family~\cite{redmon2016yolo} are widely adopted in medical object detection. LUNA16 remains a standard benchmark for pulmonary nodule detection in CT~\cite{setio2017luna16}. Evaluation commonly relies on AP/mAP and IoU~\cite{padilla2020metrics}. Systematic reviews highlight extensive use of YOLO in medical imaging and continued architectural advances~\cite{ragab2024yoloreview}. Recent CT-specific works demonstrate strong baselines via multi-scale receptive fields, transfer learning, and data-centric tuning~\cite{wu2024yolomsrf,harsono2022retinanet,nguyen2022datacentric,wehbe2024yolov8}.
 
 \subsection{Positioning of This Work}
-Prior literature establishes the utility of GAN augmentation primarily for classification and segmentation~\cite{frid2018gan,sandfort2019cycleganCT}, while evidence for CT-based object detection—especially YOLO-driven pulmonary nodule detection—remains limited and inconclusive~\cite{hammami2020cyclegan}. This paper addresses that gap through a controlled comparison of four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters and evaluation metrics (AP@0.5, AP@0.5:0.95, Mean IoU). Our findings provide insights into the limitations of CycleGAN-based augmentation for medical object detection.
+Prior literature establishes the utility of GAN augmentation primarily for classification and segmentation~\cite{frid2018gan,sandfort2019cycleganCT}, while evidence for CT-based object detection remains limited and inconclusive~\cite{hammami2020cyclegan}. This paper addresses that gap through a controlled comparison of four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters and evaluation metrics (AP@0.5, AP@0.5:0.95, Mean IoU). Our findings provide insights into the limitations of CycleGAN-based augmentation for medical object detection.
