--- a/latex/03-methodology.tex
+++ b/latex/03-methodology.tex
@@ -32,8 +32,8 @@ Each augmented copy applies exactly one of the aforementioned transformations. F
 
 \subsection{CycleGAN Setup}
 CycleGAN is used to introduce appearance-level variability, such as texture, intensity and contrast while preserving anatomical structure. \\
-We construct two domains A (original) and B (styled) from the same slice set via a deterministic 80/20 split. \texttt{trainA/testA} contain original slices, while \texttt{trainB/testB} apply a fixed style transform (contrast 1.4, brightness 1.15) to form a target appearance domain. Samples are unpaired, consistent with CycleGAN’s design~\cite{zhu2017cyclegan}. \\
-In total, all 70.315 slices were used to build the domains, yielding 56.252 trainA/trainB and 14.063 testA/testB images. Due to computational constraints, CycleGAN training is capped at 2.000 images per epoch; this cap applies only to CycleGAN training. \\
+We construct two domains A (original) and B (styled) from the same slice set via a deterministic 80/20 split. \texttt{trainA/testA} contain original slices, while \texttt{trainB/testB} apply a fixed style transform (brightness 1.15, contrast 1.4) to form a target appearance domain. Samples are unpaired, consistent with CycleGAN’s design~\cite{zhu2017cyclegan}. \\
+In total, all 70.315 slices were used to build the domains, yielding 56.252 trainA/trainB and 14.063 testA/testB images. Due to computational constraints, CycleGAN training is capped at 2.000 images instead of all images; this cap applies only to CycleGAN training. \\
 CycleGAN is trained for 25 epochs plus 25 epochs of linear learning-rate decay (50 epochs total). At epoch 50, the generator produces synthetic outputs for domain A and B (fake, real and reconstructed). Only the \emph{fake} images are used to augment YOLO training; real and reconstructed outputs are discarded. Concretely, 300 synthetic outputs are produced, of which 100 fake images are incorporated into the training set (these 100 images constitute $N_{\text{gan}}$ in the results). When added to the YOLO training, synthetic files are saved with a \texttt{cyc\_*} prefix, and labels are copied from the corresponding real slice. \\
 Because the A -> B translation only operates at the appearance level and preserves image geometry, we copy the label from the corresponding original slice to each generated image. \\
 YOLO is trained on the full real training split. In training settings including CycleGAN, we add the 100 CycleGAN fake images; validation images remain unaugmented.
