--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -45,5 +45,5 @@ Classical Aug + CycleGAN & 295 & $5\times$295 & 100 & \textbf{0.822} & \textbf{0
 \end{table}
 \noindent
 Overall, settings with classical augmentations improve all metrics over the baseline settings. \\
-The baseline + CycleGAN setting alone increases AP@0.5:0.95 and Mean IoU relative to baseline, with a slightly lower AP@0.5. \\
+The baseline + CycleGAN setting alone increases AP@0.5:0.95 and Mean IoU relative to baseline, with a marginally lower AP@0.5. \\
 The setting of classical augmentation + CycleGAN has the best performance across all metrics.
