--- a/latex/06-limitations.tex
+++ b/latex/06-limitations.tex
@@ -1,5 +1,7 @@
 \section{Limitations}
 This work has several limitations. The evaluation is limited to a single dataset (LUNA16), a single GAN architecture (CycleGAN) and only one object detection model (YOLO11), which limits the generalizability of the findings. \\
 Furthermore, the experiments are conducted on two-dimensional CT slices rather than full three-dimensional slices, which may limit the ability of both classical and GAN-based augmentation methods to capture inter-slice contextual information relevant for pulmonary nodule detection. \\
-Additionaly, while CycleGAN-based augmentation increases appearance variability, it does not explicitly model geometric variations, which are critical for accurate object localization and may reduce their usefulness for improving such localization. \\
-Lastly, the realism of GAN-generated images is not assessed by clinical experts.
+Additionaly, while CycleGAN-based augmentation increases appearance variability, it does not introduce geometric variations, which are critical for accurate object localization and may reduce their usefulness for improving such localization. \\
+Furthermore, the realism of GAN-generated images is not assessed by clinical experts, although just appearance-level shifts, leaves the perceptual and diagnostic validity of the synthetic images unverified. \\
+Beyond these limitations, computational contraints such as training CycleGAN on a capped number of images and only using subsets of the original dataset may have underutilized the potential of GAN-based augmentation. \\
+Finally, while fixed hyperparameters and a single validation split, while ensuring comparability, may not reflect optimal hyperparameters or dataset variability.
