--- a/latex/05-discussion.tex
+++ b/latex/05-discussion.tex
@@ -1,5 +1,9 @@
 \section{Discussion}
 Across all training settings, CycleGAN-based augmentation provides limited benefits for pulmonary nodule detection. Compared to the baseline setting, CycleGAN increased AP@0.5:0.95 and Mean IoU, with a small decrease in AP@0.5. Classical augmentations also improved all metrics over baseline, and the combination of classical augmentation + CycleGAN achieved the strongest results, albeit modestly. \\
 The results suggest that CycleGAN acts as a complementary source of appearance variability rather than a replacement of classical augmentation. Compared to the baseline setting it increases AP@0.5:0.95 and Mean IoU, yet the largest gain comes when CycleGAN is combined with classical augmentations, which remain the largest source of improvements. \\
-These findings align with prior reports that appearance-level synthesis may not fully capture the geometric variability critical for precise localization~\cite{hammami2020cyclegan}, limiting gains for object detection. In line with this, anatomically consistent synthesis, such as diffusion or 3D style-based generators could be promising directions~\cite{khader2023ddpm3d,ellis2022stylegan3d}. \\
+In our setup, CycleGAN primarily induces appearance-level shifts with brightness and contrast changes, making its effect similar to our classical augmentations (brightness, contrast, blur, noise and CLAHE). Given that these classical augmentations improved all metrics at a fraction of the computational cost, the use of a CycleGAN, which requires adversarial and cycle-consistent training, appears difficult to justify if the aim is to solely improve appearance robustness. \\
+This is consistent with the observed pattern: AP@0.5:0.95 and Mean IoU increase modestly, while AP@0.5 shows no clear advantage, suggesting limited impact on geometric localization. For pulmonary nodule detection, geometric variability is likely more consequential than appearance shifts. \\
+While geometric augmentations are intentionally avoided to maintain label consistency, future work should investigate generative approaches that can introduce anatomically consistent geometric variation with fitting bounding box transformations to directly target localization performance. \\
+In line with this, methods such as diffusion or 3D style-based generators could be promising directions~\cite{khader2023ddpm3d,ellis2022stylegan3d}. \\
+These findings align with prior reports that appearance-level synthesis may not fully capture the geometric variability critical for precise localization~\cite{hammami2020cyclegan}, limiting gains for object detection. \\
 Altogether, these results suggest that CycleGAN-based augmentation provides limited benefit for object detection in chest CT scans and that GAN-based augmentation strategies effective for classification and segmentation tasks may not transfer to object detection tasks.
