--- a/latex/main.tex
+++ b/latex/main.tex
@@ -68,9 +68,9 @@ The limited availability of annotated medical imaging data is a major challenge 
 
 This work investigates the impact of CycleGAN-based data augmentation on pulmonary nodule detection in chest CT images. Experiments are conducted on a subset of the LUNA16 dataset using the YOLO11 object detection framework. Four training settings are compared under identical hyperparameters: a baseline setting trained on real data only, baseline training with appearance-level augmentations, training on a combination of real and CycleGAN-generated images and a combination of appearance-level and CycleGAN-based augmentation.
 
-On a fixed validation set, CycleGAN increased AP@0.5:0.95 and Mean IoU relative to the baseline but slightly reduced AP@0.5; appearance-level, label-preserving augmentation improved all metrics, and their combination with CycleGAN-generated images achieved the best yet modest results. 
+On a fixed validation set, CycleGAN increased AP@0.5:0.95 and Mean IoU relative to the baseline but marginally reduced AP@0.5; appearance-level, label-preserving augmentation improved all metrics, and their combination with CycleGAN-generated images achieved the best yet modest results. 
 
-These findings indicate that appearance-level synthesis offers little benefit for object detection and complements, rather than replaces, classical augmentation.
+These findings indicate that appearance-level synthesis offers little benefit for object detection and complements, rather than replaces, classical augmentation. Given that classical augmentation improved all metrics at a friction of the computational cost, utilizing CycleGAN for solely appearance robustness is difficult to justify.
 
 This study concludes that gains reported for GAN-based augmentation in classification and segmentation does not directly translate to object detection; future work should explore anatomy-aware, 3D or diffusion-based synthesis to better model geometric variability.
 \keywords{Medical Object Detection, Generative Adversarial Networks, CycleGAN, YOLO, Data Augmentation}
