Added work distribution

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -92,6 +92,7 @@ This study concludes that gains reported for GAN-based augmentation in classific
 \input{06-limitations}
 % ------------------------------------------------------------
 \input{07-conclusion}
+% ------------------------------------------------------------
 
 % ---- Bibliography ----
 %
@@ -100,4 +101,6 @@ This study concludes that gains reported for GAN-based augmentation in classific
 %
 \bibliographystyle{splncs04}
 \bibliography{references}
+\newpage
+\input{08-work-distribution}
 \end{document}
