--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -1,4 +1,5 @@
 \section{Results}
+This section summarizes the qualitative examples and quantitative performance of the four training settings and show the effects of CycleGAN and classical augmentation on object detection.
 
 \subsection{Qualitative Examples}
 Figure~\ref{fig:aug_examples} shows appearance-level augmentations (contrast, brightness, blur, noise, CLAHE) applied to a representative slice; Figure~\ref{fig:cyclegan_example} shows a CycleGAN-generated sample.
