Comments for section 1

--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -1,5 +1,6 @@
 \section{Introduction}
-Object detection in computed tomography (CT) plays a crucial role in reinforcing diagnostic accuracy and clinical decision-making. In the last few years, deep learning-based object detection frameworks like You Only Look Once (YOLO) have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11,ragab2024yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy constraints, acquisition costs, and annotation burden. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to unseen data. \\
+While cancer is one of the leading causes in the world, lung cancer in particular is responsible for the most cancer-related deaths~\cite{who_cancer}, and early detection of small pulmonary nodules in lung computed tomography (CT) is critical for prognosis and intervention~\cite{de2020reduced}. Standardized CT benchmarks such as LUNA16 provide curated datasets for evaluating nodule detection systems~\cite{setio2017luna16}. \\
+In the last few years, deep learning-based object detection frameworks like You Only Look Once (YOLO) have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11,ragab2024yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy constraints, acquisition costs, and annotation burden. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to unseen data. \\
 To mitigate data scarcity, Generative Adversarial Networks (GANs) \cite{goodfellow2014gan} have been used to synthesize realistic images for augmentation. Prior studies report notable gains in classification and segmentation when augmenting CT data with GAN-generated images \cite{frid2018gan,sandfort2019cycleganCT}. In contrast, the benefit in object detection remains uncertain: CycleGAN-based augmentation applied to YOLO for multi-organ CT detection has yielded mixed findings \cite{hammami2020cyclegan}. This motivates an investigation of GAN-based augmentation for pulmonary nodule detection in CT. 
 
 \subsection{Novelty \& Contributions}
@@ -11,5 +12,5 @@ Despite promising results of GAN augmentation in medical classification and segm
 \end{itemize}
 
 \subsection{Research Question}
-Based on the problems described above, the central research question of this work is: \\
+Based on the problems and contributions described above, the central research question of this work is: \\
 \textbf{Do CycleGAN-generated chest CT images improve pulmonary nodule detection accuracy when real training data is limited?}
