--- a/latex/references.bib
+++ b/latex/references.bib
@@ -224,3 +224,24 @@
   pages = {2980--2988},
   doi = {10.1109/ICCV.2017.324}
 }
+
+@misc{who_cancer,
+  author       = {World Health Organization},
+  title        = {Cancer},
+  howpublished = {WHO Fact Sheets},
+  year         = {2025},
+  month        = feb,
+  note         = {Accessed: 21 Jan. 2026},
+  url          = {https://www.who.int/news-room/fact-sheets/detail/cancer}
+}
+
+@article{de2020reduced,
+  title={Reduced lung-cancer mortality with volume CT screening in a randomized trial},
+  author={de Koning, Harry J and van Der Aalst, Carlijn M and de Jong, Pim A and Scholten, Ernst T and Nackaerts, Kristiaan and Heuvelmans, Marjolein A and Lammers, Jan-Willem J and Weenink, Carla and Yousaf-Khan, Uraujh and Horeweg, Nanda and others},
+  journal={New England journal of medicine},
+  volume={382},
+  number={6},
+  pages={503--513},
+  year={2020},
+  publisher={Mass Medical Soc}
+}
