--- a/latex/04-results.tex
+++ b/latex/04-results.tex
@@ -45,6 +45,8 @@ Classical Aug + CycleGAN & 295 & $5\times$295 & 100 & \textbf{0.822} & \textbf{0
 \end{tabular}
 \end{table}
 \noindent
-Overall, settings with classical augmentations improve all metrics over the baseline settings. \\
-The baseline + CycleGAN setting alone increases AP@0.5:0.95 and Mean IoU relative to baseline, with a marginally lower AP@0.5. \\
-The setting of classical augmentation + CycleGAN has the best performance across all metrics.
+Across all four training settings, classical augmentations consistently improved all metrics relative to the baseline trained solely on real slices. In particular, adding classical augmentations led to higher AP@0.5, AP@0.5:0.95, and Mean IoU. \\
+Training with CycleGAN-generated images (in addition to real images) yielded a higher AP@0.5:0.95 and Mean IoU compared to baseline, while AP@0.5:0.95 decreased (0.383 vs. 0.384), although this difference is so small that is likely falls withing normal variation. \\
+The combined setting of classical augmentation + CycleGAN achieved the best overall performance across all metrics, though the gains over classical augmentation alone were modest.
+Altogether, these results suggest that CycleGAN serves as a complementary source of appearance variability that can modestly improve performance but does not replace classical augmentation. \\
+Given that classical augmentation also improved all metrics at lower computational overhead, the additional computational complexity of CycleGAN is hard to justify if solely used for appearance robustness.
