--- a/latex/main.tex
+++ b/latex/main.tex
@@ -16,7 +16,7 @@
 % Other font encondings may result in incorrect characters.
 %
 \usepackage{graphicx}
-\usepackage{subfig}
+\usepackage{subcaption}
 \usepackage{float}
 \makeatletter
 \setlength{\@fptop}{0pt}
@@ -89,9 +89,7 @@ This study concludes that gains reported for GAN-based augmentation in classific
 % ------------------------------------------------------------
 \input{05-discussion}
 % ------------------------------------------------------------
-\input{06-limitations}
-% ------------------------------------------------------------
-\input{07-conclusion}
+\input{06-conclusion}
 % ------------------------------------------------------------
 
 % ---- Bibliography ----
@@ -102,5 +100,5 @@ This study concludes that gains reported for GAN-based augmentation in classific
 \bibliographystyle{splncs04}
 \bibliography{references}
 \newpage
-\input{08-work-distribution}
+\input{work-distribution}
 \end{document}
