Added comments for section 6

--- a/latex/06-conclusion.tex
+++ b/latex/06-conclusion.tex
@@ -10,5 +10,8 @@ Finally, while fixed hyperparameters and a single validation split, while ensuri
 \subsection{Conclusion}
 This study evaluated CycleGAN-based augmentation for pulmonary nodule detection in chest CT scans using YOLO11 across four controlled training settings. The inclusion of CycleGAN-generated images increased AP@0.5:0.95 and Mean IoU relative to the baseline, but with a marginal decrease in AP@0.5. Appearance-level, label-preserving augmentations improved all metrics over baseline, and their combination with CycleGAN achieved the best, yet modest results. \\
 These findings indicate that appearance-level synthesis via CycleGAN offers little benefit for object detection and that gains observed in classification and segmentation does not necessarily translate into gains in object detection, and is difficult to justify given its computational overhead when its effect overlap with classical augmentations. \\
-Future work should explore anatomically consistent, diffusion- or 3D style-based generators to better capture geometric variability for precise detection. \\
-Limitations include reliance on a single dataset, one GAN architecture, and one object detection model, 2D slice processing, the absence of clinical validation of realism and computational constraints.
+Future work should explore anatomically consistent generative approaches to better capture geometric variability for precise detection.
+Particularly, transformer- and latent-based diffusion models have shown promise for generating anatomy-consistent images, while style-based 3D models have shown realistic lung CT modeling. \\
+Integrating such methods with label-consistent bounding box transformations overcome the problem of utilizing generative models purely for appearance-level transformations and may increase detection performance. \\
+Beyond generated images, expanding the experimental scope to multiple datasets, different object detection models like different YOLO variants would help assess generalizability. \\
+Lastly, scaling generative training, optimizing hyperparameters and exploring geometry-aware augmentation could highlight the potential of generative augmentation in CT object detection.
