--- a/latex/02-related-work.tex
+++ b/latex/02-related-work.tex
@@ -6,7 +6,9 @@ Generative Adversarial Networks (GANs)~\cite{goodfellow2014gan} and CycleGAN~\ci
 Beyond GANs, diffusion models and style-based generators provide additional context. Transformer- and latent-diffusion approaches improve anatomical consistency and downstream performance in multiple modalities~\cite{pan2023ddpm,khader2023ddpm3d}. 3D and StyleGAN-based methods have modeled lung CT textures with high realism~\cite{ellis2022stylegan3d,shi2020stylegan}. These works indicate that volumetric or anatomy-aware synthesis may be more suitable than purely appearance-level augmentation for tasks requiring precise localization.
 
 \subsection{Object Detection in Chest CT}
-Detectors such as Faster R-CNN~\cite{ren2015fasterrcnn}, RetinaNet~\cite{lin2017focal}, and the YOLO family~\cite{redmon2016yolo} are widely adopted in medical object detection. LUNA16 remains a standard benchmark for pulmonary nodule detection in CT~\cite{setio2017luna16}. Evaluation commonly relies on AP/mAP and IoU~\cite{padilla2020metrics}. Systematic reviews highlight extensive use of YOLO in medical imaging and continued architectural advances~\cite{ragab2024yoloreview}. Recent CT-specific works demonstrate strong baselines via multi-scale receptive fields, transfer learning, and data-centric tuning~\cite{wu2024yolomsrf,harsono2022retinanet,nguyen2022datacentric,wehbe2024yolov8}.
+In chest CT object detection, LUNA16 is a common benchmark dataset used with AP/mAP and IoU metrics; detection models such as Faster R-CNN, RetinaNet, and the YOLO familiy serve as typical baselines~\cite{setio2017luna16,padilla2020metrics,redmon2016yolo,ren2015fasterrcnn,lin2017focal,ragab2024yoloreview}. \\
+Recent CT-specific works demonstrate strong baselines via multi-scale receptive fields, transfer learning, and data-centric tuning~\cite{wu2024yolomsrf,harsono2022retinanet,nguyen2022datacentric,wehbe2024yolov8}. \\
+However, the focus of this work remains on a comparison of appearance-level augmentations versus CycleGAN-based augmentation for CT object detection, using LUNA16 as a benchmark dataset and YOLO11 as the baseline detection model.
 
 \subsection{Positioning of This Work}
 Prior literature establishes the utility of GAN augmentation primarily for classification and segmentation~\cite{frid2018gan,sandfort2019cycleganCT}, while evidence for CT-based object detection remains limited and inconclusive~\cite{hammami2020cyclegan}. This paper addresses that gap through a controlled comparison of four training settings (baseline, classical augmentation, baseline + CycleGAN, classical augmentation + CycleGAN) under identical hyperparameters and evaluation metrics (AP@0.5, AP@0.5:0.95, Mean IoU). Our findings provide insights into the limitations of CycleGAN-based augmentation for medical object detection.
