--- a/latex/main.tex
+++ b/latex/main.tex
@@ -7,6 +7,7 @@
 \usepackage{lmodern}
 \usepackage{url}
 \usepackage[hidelinks]{hyperref}
+\hypersetup{draft}
 \usepackage{booktabs}
 \usepackage{siunitx}
 \sisetup{output-decimal-marker = {.}}
@@ -16,7 +17,8 @@
 % Other font encondings may result in incorrect characters.
 %
 \usepackage{graphicx}
-\usepackage{subcaption}
+\usepackage{caption}
+\usepackage{subfig}
 \usepackage{float}
 \makeatletter
 \setlength{\@fptop}{0pt}
