--- a/latex/01-introduction.tex
+++ b/latex/01-introduction.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Introduction}
 While cancer is one of the leading causes in the world, lung cancer in particular is responsible for the most cancer-related deaths~\cite{who_cancer}, and early detection of small pulmonary nodules in lung computed tomography (CT) is critical for prognosis and intervention~\cite{de2020reduced}. Standardized CT benchmarks such as LUNA16 provide curated datasets for evaluating nodule detection systems~\cite{setio2017luna16}. \\
 In the last few years, deep learning-based object detection frameworks like You Only Look Once (YOLO) have shown solid performance in many imaging tasks because of their efficiency and real-time detection capabilities \cite{yolo11,ragab2024yoloreview}. However, object detection models, especially in sensitive fields like medical imaging, often face the problem of having too little usable labeled data, or it is very difficult to access such data due to privacy constraints, acquisition costs, and annotation burden. As a result, models trained on small or unbalanced datasets tend to overfit and perform poorly when generalizing to unseen data. \\
